# correlation_method

./: README.md  data1.txt  main.py
cpp/: CMakeLists.txt  Correlator.cpp  Correlator.h  Generator.cpp  Generator.h  main.cpp
